# GVerb

./: .gitignore  .gitmodules  CMakeLists.txt  GUIDELINES.md  README.md  main.cpp
.github/workflows/: code_check.yml  main.yml
src/: GVerbEditor.cpp  GVerbEditor.hpp  GVerbProcessor.cpp  GVerbProcessor.hpp
src/binary_data/: Fonts.cpp  Fonts.hpp
